# rubicon_test_task

./: .gitignore  CMakeLists.txt  README.md  data1.xml  data2.xml  data3.xml  data4.xml  peers.xml  rubikon_test_task.sublime-project  run_nweb_and_3_nodes.sh
src/: html.cpp  html.hpp  http.cpp  http.hpp  json.cpp  json.hpp  main.cpp  misc_utils.h  mt.cpp  mt.hpp  records.cpp  records.hpp  settings.cpp  settings.hpp
