cmake_minimum_required(VERSION 2.8.9)
project (rubikon_test_task)
set (CMAKE_CXX_STANDARD 11)
set( CMAKE_BUILD_TYPE Release)
file(GLOB SOURCES "src/*.cpp")
add_executable(rubikon_test_task ${SOURCES})

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
#set(CMAKE_CXX_FLAGS "-O0 -g -ggdb")
find_package (Threads)
target_link_libraries (rubikon_test_task ${CMAKE_THREAD_LIBS_INIT})

find_package(Boost COMPONENTS system )
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
   target_link_libraries(rubikon_test_task ${Boost_LIBRARIES})
endif()

find_package (CURL)
if (CURL_FOUND)
  include_directories(${CURL_INCLUDE_DIRS})
  target_link_libraries (rubikon_test_task ${CURL_LIBRARIES})
endif()