cmake_minimum_required(VERSION 2.8.9)
project (rubikon_test_task)
set (CMAKE_CXX_STANDARD 11)
set( CMAKE_BUILD_TYPE Debug)
file(GLOB SOURCES "src/*.cpp")
add_executable(nweb ${SOURCES})

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_FLAGS "-O0 -g -ggdb")
find_package (Threads)
target_link_libraries (nweb ${CMAKE_THREAD_LIBS_INIT})

find_package(Boost COMPONENTS system )
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
   target_link_libraries(nweb ${Boost_LIBRARIES})
endif()

find_package (CURL)
if (CURL_FOUND)
  include_directories(${CURL_INCLUDE_DIRS})
  target_link_libraries (nweb ${CURL_LIBRARIES})
endif()